Input shadow on iOS and pagination mobile margin fixes

--- a/content/themes/ra/assets/app/scss/base/_forms.scss
+++ b/content/themes/ra/assets/app/scss/base/_forms.scss
@@ -57,6 +57,7 @@ textarea {
     color: #666;
     background-color: #FFF;
     border-color: #CCC;
+    -webkit-appearance: none;
 }
 
 textarea {
